[build] update api.rest.tests and snomed.api.rest.tests surefire args